fixing some elements on small screens

--- a/labs/meteor-client/app/client/stylesheets/portrait/chat.less
+++ b/labs/meteor-client/app/client/stylesheets/portrait/chat.less
@@ -38,6 +38,13 @@
     }
   }
 
+  .closeTab {
+    font-size: 3vw;
+  }
+  .active {
+    border: 2px solid extract(@azure, 2) !important;
+  }
+
   @media (min-device-width: 1280px) {
     #newMessageInput {
       height: 40px;
